# ai-club-assignments

./: .gitignore  README.md
dashboard/: app.js  index.html  style.css
submissions/539-apu/week-01/: dummy.txt
submissions/675-ornob/docs/: architecture.md  request-flow.md  tools.md
submissions/675-ornob/week-01/: .env.example  Dockerfile.postgres  docker-compose.yml  pyproject.toml  requirements.txt  week-01.ipynb
submissions/726-jamil/: week-01.ipynb
submissions/726-jamil/week-01/: week-01.ipynb
